# Aletheia

./: .env  .env.example  Dockerfile  README.md  malabar.db  malabar.db-shm  malabar.db-wal  nixpacks.toml  pitch_deck.md
api/: .env  malabar.db  malabar.db-shm  malabar.db-wal  package-lock.json  package.json
api/src/: seed-demo.js  seed-users.js  server.js
api/src/chatbot/: routes.js  server.js
api/src/db/: schema.js
api/src/routes/: auth.js  oracle.js  receivables.js  stellar.js
api/src/services/: ipfs.js  soroban.js  stellar.js
contracts/: Cargo.toml
contracts/fractional_sale/: Cargo.toml
contracts/fractional_sale/src/: lib.rs
contracts/receivable_registry/: Cargo.toml
contracts/receivable_registry/src/: lib.rs
contracts/settlement_escrow/: Cargo.toml
contracts/settlement_escrow/src/: lib.rs
frontend/: .env  index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatbotWidget.jsx  DexListingPanel.jsx  DocumentUpload.jsx  Footer.jsx  LegalModal.jsx  LiveFeed.jsx  Navbar.jsx  NetworkStatusIndicator.jsx  ReceivableCard.jsx  SharePurchaseModal.jsx  WalletConnectButton.jsx
frontend/src/hooks/: useReceivables.js  useWallet.js
frontend/src/pages/: AdminPanel.jsx  ExporterDashboard.jsx  HowItWorks.jsx  InvestorDashboard.jsx  Landing.jsx  Login.jsx  Marketplace.jsx  NotFound.jsx  Profile.jsx  ReceivableDetail.jsx  StellarWallet.jsx
frontend/src/stellar/: client.js
scripts/: deploy-contracts.ps1  deploy-contracts.sh  seed-demo.js  setup-testnet.ps1  setup-testnet.sh
(+7 files in other folders)
