[workspace]
resolver = "2"
members = [
    "receivable_registry",
    "fractional_sale",
    "settlement_escrow",
]

[workspace.dependencies]
soroban-sdk = { version = "21.7.6" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
